--- a/src/main/webapp/secure/tracks.html
+++ b/src/main/webapp/secure/tracks.html
@@ -14,14 +14,14 @@
   <link type="text/css" rel="stylesheet" href="../css/hikingtracks-large.css" media="screen and (min-width: 1240px)">
   <link type="text/css" rel="stylesheet" href="../css/hikingtracks-small.css" media="screen and (max-width: 870px)">
   <link type="text/css" rel="stylesheet" href="../css/jquery-ui.min.css" media="all"/>
-  <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/jquery.json-2.3.min.js"></script>
   <script type="text/javascript" src="../js/jquery-ui.min.js" ></script>
   <script type="text/javascript" src="../js/jquery-ui-i18n.min.js"></script>
   <script type="text/javascript" src="../js/jquery.dateFormat-1.0.js"></script>
   <script type="text/javascript" src="../js/jquery.i18n.properties-min-1.0.9.js"></script>
-  <script type="text/javascript" src="../js/jquery.mustache.js"></script>
-  <script type="text/javascript" src="../js/mustache.js"></script>
+  <script type="text/javascript" src="../js/jquery.mustache.min.js"></script>
+  <script type="text/javascript" src="../js/mustache.min.js"></script>
   <script type="text/javascript" src="../js/common.js"></script>
   <script type="text/javascript" src="../js/hikingtracks.js"></script>
   <script type="text/javascript">
