--- a/src/main/webapp/pages/map.html
+++ b/src/main/webapp/pages/map.html
@@ -14,7 +14,7 @@
   <link type="text/css" rel="stylesheet" href="../css/hikingtracks-small.css" media="screen and (max-width: 870px)">
   <link type="text/css" rel="stylesheet" href="../css/jquery-ui.min.css" media="all"/>
   <link type="text/css" rel="stylesheet" href="../css/chocolat.css" />
-  <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/jquery.json-2.3.min.js"></script>
   <script type="text/javascript" src="../js/jquery-ui.min.js" ></script>
   <script type="text/javascript" src="../js/jquery-ui-i18n.min.js"></script>
@@ -23,8 +23,8 @@
   <script type="text/javascript" src="../js/jquery.dateFormat-1.0.js"></script>
   <script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?libraries=geometry&key=AIzaSyDWeHGoMQhMLrjL2P57l54AKhC7w_GyyXQ"></script>
   <script type="text/javascript" src="../js/jquery.i18n.properties-min-1.0.9.js"></script>
-  <script type="text/javascript" src="../js/jquery.mustache.js"></script>
-  <script type="text/javascript" src="../js/mustache.js"></script>
+  <script type="text/javascript" src="../js/jquery.mustache.min.js"></script>
+  <script type="text/javascript" src="../js/mustache.min.js"></script>
   <script type="text/javascript" src="../js/common.js"></script>
   <script type="text/javascript" src="../js/hikingtracks.js"></script>
   <script type="text/javascript">
