--- a/src/main/webapp/pages/template.html
+++ b/src/main/webapp/pages/template.html
@@ -12,10 +12,10 @@
 <link type="text/css" rel="stylesheet" href="../css/hikingtracks.css" media="(min-width: 870px) and (max-width: 1240px)" />
 <link type="text/css" rel="stylesheet" href="../css/hikingtracks-large.css" media="screen and (min-width: 1240px)">
 <link type="text/css" rel="stylesheet" href="../css/hikingtracks-small.css" media="screen and (max-width: 870px)">
-<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/jquery.i18n.properties-min-1.0.9.js"></script>
-<script type="text/javascript" src="../js/jquery.mustache.js"></script>
-<script type="text/javascript" src="../js/mustache.js"></script>
+<script type="text/javascript" src="../js/jquery.mustache.min.js"></script>
+<script type="text/javascript" src="../js/mustache.min.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 <script type="text/javascript" src="../js/hikingtracks.js"></script>
 <script type="text/javascript">
