Update from upstream

--- a/src/main/webapp/secure/track.html
+++ b/src/main/webapp/secure/track.html
@@ -25,7 +25,7 @@
   <script type="text/javascript" src="../js/jquery.notification.min.js"></script>
   <script type="text/javascript" src="../js/common.js"></script>
   <script type="text/javascript" src="../js/hikingtracks.js"></script>
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDWeHGoMQhMLrjL2P57l54AKhC7w_GyyXQ"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWeHGoMQhMLrjL2P57l54AKhC7w_GyyXQ"></script>
   <script type="text/javascript">
     $(document).ready(function() {
       client.initMessages('../bundle/');
