--- a/src/main/webapp/pages/map.html
+++ b/src/main/webapp/pages/map.html
@@ -26,6 +26,7 @@
   <script type="text/javascript" src="../js/jquery.mustache.min.js"></script>
   <script type="text/javascript" src="../js/mustache.min.js"></script>
   <script type="text/javascript" src="../js/jquery.notification.min.js"></script>
+  <script type="text/javascript" src="../js/loadgpx.js"></script>
   <script type="text/javascript" src="../js/common.js"></script>
   <script type="text/javascript" src="../js/hikingtracks.js"></script>
   <script type="text/javascript">
